# rust-burn-test

embedding_test/: Cargo.toml
embedding_test/src/: main.rs
linear_regression/: Cargo.toml
linear_regression/src/: data.rs  main.rs  models.rs
linear_regression/src/models/: embedding_model.rs  linear_model.rs
machine-learning/: Cargo.toml
machine-learning/data_preparation/: Cargo.toml
machine-learning/data_preparation/src/: data.rs  main.rs
machine-learning/linear_regression/: Cargo.toml
machine-learning/linear_regression/src/: batch.rs  batcher.rs  dataset.rs  lib.rs  main.rs  models.rs  training.rs
machine-learning/linear_regression/src/dataset/: mapped_dataset.rs  raw_dataset.rs  taxifare_dataset.rs
machine-learning/linear_regression/src/models/: embedding_model.rs  linear_model.rs  taxifare_model.rs
tensor-test/: Cargo.toml
tensor-test/src/: main.rs
