[package]
name = "data_preparation"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = { version = "0.46.0", features = [
    "lazy",
    "strings",
    "dtype-datetime",
    "timezones",
    "temporal",
    "dtype-struct",
    #"dtype-categorical",
    "csv",
] }
libm = "0.2.13"
itertools = "0.14.0"
